--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,19 +5,7 @@
     <title>{% block title %}ZDP{% endblock %}</title>
 
     <!-- Meta -->
-    {% block meta %}
-    <meta
-      name="description"
-      content="Chris Stamper's CV. Software Engineer and Chemical Engineer based in Tulsa, Oklahoma."
-    />
-    <meta
-      name="keywords"
-      content="Chris Stamper, Software Engineer, Chemical Engineer, Tulsa, Oklahoma, CV, Resume"
-    />
-    <meta name="author" content="Chris Stamper" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    {% endblock %}
+    {% include 'meta.html' %}
 
     <!-- Favicon -->
     <link
@@ -40,204 +28,8 @@
   </head>
   <body>
     <header class="container">
-      {% block nav %}
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img
-              src="{{ url_for('static', filename='images/favicon.ico') }}"
-              alt="Chris Stamper - CV"
-              width="auto"
-              height="30"
-            />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('main_routes.index') }}"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('main_routes.projects') }}"
-                  >Search</a
-                >
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Blogs
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li>
-                    <a
-                      class="dropdown-item"
-                      href="{{ url_for('main_routes.blogs') }}"
-                      >All</a
-                    >
-                  </li>
-                  <li><a class="dropdown-item" href="#">Optimization</a></li>
-                </ul>
-              </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-              {% if current_user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('auth_routes.signout') }}"
-                  >Sign Out</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="{{ url_for('admin_routes.interface') }}"
-                  >Interface</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('auth_routes.account') }}"
-                  >Account</a
-                >
-              </li>
-              {% else %}
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('auth_routes.signup') }}"
-                  >Sign Up</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('auth_routes.signin') }}"
-                  >Sign In</a
-                >
-              </li>
-              {% endif %}
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Projects
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li>
-                    <a class="dropdown-item" href="#strain">STRAIN.gg Clouds</a>
-                  </li>
-                  <li><a class="dropdown-item" href="#hbnb">HBNB Clone</a></li>
-                  <li>
-                    <a class="dropdown-item" href="#shell">Simple Shell</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      {% endblock %} {% block header %}
-      <section class="row align-items-center">
-        <div class="col-12">
-          <h1>Chris Stamper</h1>
-          <h2>Data Engineer, Software Engineer, Chemical Engineer</h2>
-          <p class="fs-5">Location: Tulsa, Oklahoma, United States</p>
-        </div>
-      </section>
-      <section class="row align-items-center">
-        <div class="col-md-4">
-          <div class="mb-4">
-            <h3>Contact Info</h3>
-            <address>
-              <ul class="list-unstyled">
-                <li>
-                  <span class="info-label">Phone:</span>
-                  <a href="tel:9189144816">(918) 914-4816</a>
-                </li>
-                <li>
-                  <span class="info-label">Email:</span>
-                  <a href="mailto:cstampok@gmail.com">cstampok@gmail.com</a>
-                </li>
-                <li>
-                  <span class="info-label">Website:</span>
-                  <a href="https://zerodaypoke.com/pr/cv/v2.html"
-                    >zerodaypoke.com/pr/cv/v2.html</a
-                  >
-                </li>
-                <li>
-                  <span class="info-label">GitHub:</span>
-                  <a href="https://github.com/zerodaypoke"
-                    >github.com/ZeroDayPoke</a
-                  >
-                </li>
-                <li>
-                  <span class="info-label">LinkedIn:</span>
-                  <a href="https://www.linkedin.com/in/zerodaypoke/"
-                    >linkedin.com/in/zerodaypoke/</a
-                  >
-                </li>
-              </ul>
-            </address>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="mb-4">
-            <h3>Objective</h3>
-            <p class="small">
-              I am a versatile and driven engineer seeking an exciting career
-              opportunity. While I have a particular interest in transitioning
-              into a machine learning role, I am also open to positions in
-              various areas, including full-stack development. I am eager to
-              apply my technical expertise and problem-solving skills to
-              contribute to the success of innovative projects and teams.
-            </p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="text-md-end">
-            <div class="mb-4">
-              <h3>Interact</h3>
-              <a
-                href="https://zerodaypoke.com/static/resume_draft_v2.pdf"
-                download="Source_Code"
-                class="btn btn-primary ml-2"
-                >Download Source Code</a
-              >
-              <a
-                href="https://zerodaypoke.com/static/chris_stamper_cv.pdf"
-                download="Chris_Stamper_CV"
-                class="btn btn-primary"
-                >Download CV</a
-              >
-              <a
-                href="mailto:cstampok@gmail.com?subject=Job Opportunity"
-                class="btn btn-primary ml-2"
-                >Hire Me</a
-              >
-            </div>
-          </div>
-        </div>
-      </section>
-      {% endblock %}
+      {% include 'navbar.html' %} {% include 'header.html' %}
     </header>
-
     <main class="container">
       {% block content %}
       <section class="row">
@@ -377,62 +169,7 @@
       {% endblock %}
     </main>
 
-    {% block footer %}
-    <footer class="bg-dark mt-3 py-2">
-      <div class="container">
-        <div class="row">
-          <section class="col-md-4">
-            <h5>About</h5>
-            <p>Having fun making a digital resume... thing...</p>
-          </section>
-          <nav class="col-md-4">
-            <h5>Quick Links</h5>
-            <ul>
-              <li><a href="#">To Top</a></li>
-            </ul>
-          </nav>
-          <address class="col-md-4">
-            <h5>Contact</h5>
-            <ul class="list-unstyled text-light">
-              <li>
-                <span class="info-label">Phone:</span>
-                <a href="tel:9189144816">(918) 914-4816</a>
-              </li>
-              <li>
-                <span class="info-label">Email:</span>
-                <a href="mailto:cstampok@gmail.com">cstampok@gmail.com</a>
-              </li>
-              <li>
-                <span class="info-label">Website:</span>
-                <a href="https://zerodaypoke.com/pr/cv/v2.html"
-                  >zerodaypoke.com/pr/cv/v2.html</a
-                >
-              </li>
-              <li>
-                <span class="info-label">GitHub:</span>
-                <a href="https://github.com/zerodaypoke"
-                  >github.com/ZeroDayPoke</a
-                >
-              </li>
-              <li>
-                <span class="info-label">LinkedIn:</span>
-                <a href="https://www.linkedin.com/in/zerodaypoke/"
-                  >linkedin.com/in/zerodaypoke/</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
-        <div class="row mt-3">
-          <div class="col text-center">
-            <p>&copy; self.__name__</p>
-            <p>This has been hilarious</p>
-          </div>
-        </div>
-      </div>
-    </footer>
-    {% endblock %}
-
+    {% include 'footer.html' %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     {% block js %}{% endblock %}
   </body>
